--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="ie=edge, chromium, safari, firefox">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="C:\Users\t_alv\OneDrive\Desktop\Google Homepage\styles/style.css">
+  <link rel="stylesheet" href="/home/twodunlami/Desktop/SearchClone/styles/styles.css">
   <title>Google</title>
 <body>
 <div id="nav">
@@ -12,11 +12,11 @@
 <a href="#" id="store">Store</a>
 <a href="#" id="gmail">Gmail</a>
 <a href="#" id="images">Images</a>
-<a href="#" id="menu"><img src="https://cdn.icon-icons.com/icons2/878/PNG/512/big-and-small-dots_icon-icons.com_68589.png" alt="Menu" style="width:18px;height:18px;"></a><!--insert image of menu[unique] -->
+<a href="#" id="menu"><img src="https://cdn.icon-icons.com/icons2/878/PNG/512/big-and-small-dots_icon-icons.com_68589.png" alt="Menu" style="width:18px;height:18px;"></a><!--unique image of menu incon -->
 <a href="#" id="sign-in">Sign in</a>
 </div>
 <div id="searchsec">
-  <a href="#" id="logo"><img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png"</a>
+<a href="#" id="logo"><img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png"></a>
   <input type="text" id="search">
   <button id="google-search-btn">Google Search
   </button>
@@ -27,12 +27,12 @@
   </a></p>
 </div>
 <div id="footer">
-  <a href="#" id="">Advertising</a>
-  <a href="#" id="">Business</a>
-  <a href="#" id="">How Search Works</a>
-  <a href="#" id="">Privacy</a>
-  <a href="#" id="">Terms</a>
-  <a href="#" id="">Settings</a>
+  <a href="#" id="advertising">Advertising</a>
+  <a href="#" id="business">Business</a>
+  <a href="#" id="searchfaq">How Search Works</a>
+  <a href="#" id="privacy">Privacy</a>
+  <a href="#" id="terms">Terms</a>
+  <a href="#" id="settings">Settings</a>
 </div>
 </body>
 </head>
