--- a/index.html
+++ b/index.html
@@ -7,33 +7,34 @@
   <link rel="stylesheet" href="/home/twodunlami/Desktop/SearchClone/SearchClone/styles/styles.css">
   <title>Google</title>
 <body>
-<div id="nav">
-<a href="#" id="about">About</a>
-<a href="#" id="store">Store</a>
-<a href="#" id="gmail">Gmail</a>
-<a href="#" id="images">Images</a>
-<a href="#" id="menu"><img src="https://cdn.icon-icons.com/icons2/878/PNG/512/big-and-small-dots_icon-icons.com_68589.png" alt="Menu" style="width:18px;height:18px;"></a><!--unique image of menu incon -->
-<a href="#" id="sign-in">Sign in</a>
-</div>
-<div id="searchsec">
-<a href="#" id="logo"><img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png"></a>
+ <div id="nav">
+  <a href="#" id="about">About</a>
+  <a href="#" id="store">Store</a>
+  <a href="#" id="gmail">Gmail</a>
+  <a href="#" id="images">Images</a>
+  <a href="#" id="menu"><img src="https://cdn.icon-icons.com/icons2/878/PNG/512/big-and-small-dots_icon-icons.com_68589.png" alt="Menu" style="width:18px;height:18px;"></a> <!--insert image of menu[unique] -->
+  <a href="#" id="sign-in">Sign in</a>
+ </div>
+ <div id="searchsec">
+  <a href="#" id="logo"><img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png"></a>
   <input type="text" id="search">
-  <button id="google-search-btn">Google Search
-  </button>
-  <button id="dumb-search">
-  Page 2...Tried once before
-  </button>
-  <p><a href="#">Search your ❤️ away
+  <div id="flexbox"> <!--flexbox attribute added -->
+   <button id="google-search-btn">Google Search</button><button id="dumb-search">Page 2...Tried once before</button>
+   </div>
+  <p id="google-text"><a href="#">Search your ❤️ away
   </a></p>
-</div>
-<div id="footer">
+ </div>
+ <div></div>
+ <section>
+  <div id="footer">
   <a href="#" id="advertising">Advertising</a>
   <a href="#" id="business">Business</a>
   <a href="#" id="searchfaq">How Search Works</a>
   <a href="#" id="privacy">Privacy</a>
   <a href="#" id="terms">Terms</a>
   <a href="#" id="settings">Settings</a>
-</div>
+  </div>
+ </section>
 </body>
 </head>
 </html>
