--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <a href="#" id="logo"><img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png"></a>
   <input type="text" id="search">
   <div id="flexbox"> <!--flexbox attribute added -->
-   <button id="google-search-btn">Google Search</button><button id="dumb-search">Page 2...Tried once before</button>
+   <button id="google-search-btn">Google Search</button><button id="dumb-search">Page 2...Tried once before😩</button>
    </div>
   <p id="google-text"><a href="#">Search your ❤️ away
   </a></p>
