--- a/index.html
+++ b/index.html
@@ -8,16 +8,22 @@
   <title>Google</title>
 <body>
  <div id="nav">
-  <a href="#" id="about">About</a>
-  <a href="#" id="store">Store</a>
-  <a href="#" id="gmail">Gmail</a>
-  <a href="#" id="images">Images</a>
+  <a href="https://about.google/?fg=1&utm_source=google-US&utm_medium=referral&utm_campaign=hp-header" target="_blank" id="about">About</a>
+  <a href="https://store.google.com/US/?utm_source=hp_header&utm_medium=google_ooo&utm_campaign=GS100042&hl=en-US" target="_blank" id="store">Store</a>
+  <a href="https://www.google.com/gmail/about/" target="_blank" id="gmail">Gmail</a>
+  <a href="https://www.google.com/imghp?hl=en&ogbl" target="_blank" id="images">Images</a>
   <a href="#" id="menu"><img src="https://cdn.icon-icons.com/icons2/878/PNG/512/big-and-small-dots_icon-icons.com_68589.png" alt="Menu" style="width:18px;height:18px;"></a> <!--insert image of menu[unique] -->
-  <a href="#" id="sign-in">Sign in</a>
+  <a href="https://accounts.google.com/signin/v2/identifier?hl=en&passive=true&continue=https%3A%2F%2Fwww.google.com%2F&ec=GAZAmgQ&flowName=GlifWebSignIn&flowEntry=ServiceLogin" target="_blank" id="sign-in">Sign in</a>
  </div>
+ <style>
+  #corner {
+   padding: 5px 8px 0 16px;
+   padding-left: 14px;
+}
+ </style>
  <div id="searchsec">
   <a href="#" id="logo"><img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png"></a>
-  <input type="text" id="search">
+  <input type="text" id="search" id="corner">
   <div id="flexbox"> <!--flexbox attribute added -->
    <button id="google-search-btn">Google Search</button><button id="dumb-search">Page 2...Tried once before😩</button>
    </div>
@@ -27,12 +33,12 @@
  <div></div>
  <section>
   <div id="footer">
-  <a href="#" id="advertising">Advertising</a>
-  <a href="#" id="business">Business</a>
-  <a href="#" id="searchfaq">How Search Works</a>
-  <a href="#" id="privacy">Privacy</a>
-  <a href="#" id="terms">Terms</a>
-  <a href="#" id="settings">Settings</a>
+  <a href="https://ads.google.com/intl/en_us/home/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1#!/" target="_blank" id="advertising">Advertising</a>
+  <a href="https://smallbusiness.withgoogle.com/?subid=us-en-et-g-awa-a-g_hpbfoot1_1!o2&utm_source=google&utm_medium=ep&utm_campaign=google_hpbfooter&utm_content=google_hpbfooter&gmbsrc=us-en_US-et-gs-z-gmb-s-z-u~sb-g4sb_srvcs-u#!/" target="_blank" id="business">Business</a>
+  <a href="https://www.google.com/search/howsearchworks/?fg=1" target="_blank" id="searchfaq">How Search Works</a>
+  <a href="https://policies.google.com/privacy?hl=en&fg=1" target="_blank" id="privacy">Privacy</a>
+  <a href="https://policies.google.com/terms?hl=en&fg=1" target="_blank" id="terms">Terms</a>
+  <a href="#" target="_blank" id="settings">Settings</a>
   </div>
  </section>
 </body>
