--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="ie=edge, chromium, safari, firefox">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/home/twodunlami/Desktop/SearchClone/SearchClone/styles/styles.css">
+  <link rel="stylesheet" href="/home/twodunlami/Desktop/SearchClone/styles/styles.css">
   <title>Google</title>
 <body>
  <div id="nav">
@@ -12,8 +12,8 @@
   <a href="https://store.google.com/US/?utm_source=hp_header&utm_medium=google_ooo&utm_campaign=GS100042&hl=en-US" target="_blank" id="store">Store</a>
   <a href="https://www.google.com/gmail/about/" target="_blank" id="gmail">Gmail</a>
   <a href="https://www.google.com/imghp?hl=en&ogbl" target="_blank" id="images">Images</a>
-  <a href="#" id="menu"><img src="https://cdn.icon-icons.com/icons2/878/PNG/512/big-and-small-dots_icon-icons.com_68589.png" alt="Menu" style="width:18px;height:18px;"></a> <!--insert image of menu[unique] -->
-  <a href="https://accounts.google.com/signin/v2/identifier?hl=en&passive=true&continue=https%3A%2F%2Fwww.google.com%2F&ec=GAZAmgQ&flowName=GlifWebSignIn&flowEntry=ServiceLogin" target="_blank" id="sign-in">Sign in</a>
+  <a href="https://about.google/intl/en/products/" target="_blank" id="menu"><img src="https://cdn.icon-icons.com/icons2/878/PNG/512/big-and-small-dots_icon-icons.com_68589.png" alt="Menu" style="width:18px;height:18px;"></a> <!--insert image of menu[unique] -->
+  <a href="https://accounts.google.com/signin" target="_blank" id="sign-in">Sign in</a>
  </div>
  <style>
   #corner {
@@ -23,11 +23,11 @@
  </style>
  <div id="searchsec">
   <a href="#" id="logo"><img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png"></a>
-  <input type="text" id="search" id="corner">
+  <input type="text" id="search" id="corner" placeholder="Welcome to Static Google">
   <div id="flexbox"> <!--flexbox attribute added -->
-   <button id="google-search-btn">Google Search</button><button id="dumb-search">Page 2...Tried once before😩</button>
+   <button id="google-search-btn">Google Search</button><button onclick="document.location='/home/twodunlami/Desktop/SearchClone/SearchClone/page2.htm'" id="dumb-search">Page 2...Tried once before😩</button>
    </div>
-  <p id="google-text"><a href="#">Search your ❤️ away
+  <p id="google-text"><a href="https://water.org/" target="_blank">Search your ❤️ away
   </a></p>
  </div>
  <div></div>
@@ -38,7 +38,7 @@
   <a href="https://www.google.com/search/howsearchworks/?fg=1" target="_blank" id="searchfaq">How Search Works</a>
   <a href="https://policies.google.com/privacy?hl=en&fg=1" target="_blank" id="privacy">Privacy</a>
   <a href="https://policies.google.com/terms?hl=en&fg=1" target="_blank" id="terms">Terms</a>
-  <a href="#" target="_blank" id="settings">Settings</a>
+  <a href="https://support.google.com/accounts/answer/3118621?hl=en" target="_blank" id="settings">Settings</a>
   </div>
  </section>
 </body>
