--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <a href="https://store.google.com/US/?utm_source=hp_header&utm_medium=google_ooo&utm_campaign=GS100042&hl=en-US" target="_blank" id="store">Store</a>
   <a href="https://www.google.com/gmail/about/" target="_blank" id="gmail">Gmail</a>
   <a href="https://www.google.com/imghp?hl=en&ogbl" target="_blank" id="images">Images</a>
-  <a href="https://about.google/intl/en/products/" target="_blank" id="menu"><img src="https://cdn.icon-icons.com/icons2/878/PNG/512/big-and-small-dots_icon-icons.com_68589.png" alt="Menu" style="width:18px;height:18px;"></a> <!--insert image of menu[unique] -->
+  <a href="https://about.google/intl/en/products/" target="_blank" id="menu"><img src="https://cdn.icon-icons.com/icons2/878/PNG/512/big-and-small-dots_icon-icons.com_68589.png" alt="Menu" style="width:18px;height:18px;"></a>
   <a href="https://accounts.google.com/signin" target="_blank" id="sign-in">Sign in</a>
  </div>
  <style>
@@ -24,7 +24,7 @@
  <div id="searchsec">
   <a href="#" id="logo"><img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png"></a>
   <input type="text" id="search" id="corner" placeholder="Welcome to Static Google">
-  <div id="flexbox"> <!--flexbox attribute added -->
+  <div id="flexbox">
    <button id="google-search-btn">Google Search</button><button onclick="document.location='/home/twodunlami/Desktop/SearchClone/SearchClone/page2.htm'" id="dumb-search">Page 2...Tried once before😩</button>
    </div>
   <p id="google-text"><a href="https://water.org/" target="_blank">Search your ❤️ away
